第一次github测试

--- a/service/service-user/pom.xml
+++ b/service/service-user/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>serviceuser</artifactId>
+    <artifactId>service-user</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
