--- a/service/pom.xml
+++ b/service/pom.xml
@@ -11,6 +11,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>serviceuser</module>
+        <module>service-user</module>
     </modules>
     <artifactId>service</artifactId>
 
